# talon

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260222_initial.py  20260223_episodic_memory.py  20260226_persona_id_on_episodic.py  20260305_memory_proposals.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: chat.py  chat_router.py  health.py  logs.py  memory.py  memory_review.py  notify.py  scheduler.py  skills.py  sse.py
backend/app/cli/: __init__.py  config_cmd.py  doctor.py  main.py  onboard.py  prompter.py  status.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  middleware.py  security.py
backend/app/integrations/: __init__.py  base.py  discord.py  manager.py  slack.py  telegram.py  webhook.py
backend/app/llm/: __init__.py  circuit_breaker.py  gateway.py  models.py  react_tools.py  retry.py
backend/app/memory/: __init__.py  compressor.py  curation.py  curator.py  engine.py  episodic.py  markdown_writer.py  matrix_merge.py  promotion.py  proposals.py  working.py
backend/app/models/: __init__.py  episodic.py  proposal.py
backend/app/notifications/: __init__.py  ntfy.py
backend/app/personas/: __init__.py  registry.py
backend/app/scheduler/: engine.py  jobs.py
backend/app/security/: __init__.py  audit_log.py  leak_scanner.py  prompt_guard.py  skill_http_client.py  ssrf_guard.py
backend/app/sentinel/: tree.py  watcher.py
backend/skills/: __init__.py
backend/tests/: conftest.py
(+157 files in other folders)
