[project]
name = "talon"
version = "0.1.0"
description = "Self-hosted personal AI gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "starlette>=0.41.0",
    "litellm",
    "pyyaml",
    "pgvector>=0.3.0",
    "tomli>=2.0.0",
    "apscheduler>=3.10.0,<4",
    "watchdog>=4.0.0",
    "aiosmtplib>=3.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]
discord = ["discord.py>=2.3.0"]
slack = ["slack-bolt>=1.18.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
exclude = ["alembic"]
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUntypedBaseClass = false
reportUntypedFunctionDecorator = false
reportMissingTypeArgument = false
reportCallIssue = false
